Safari365 Prod/src/objects/Additional_Cost__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object is used to maintain the Additional cost which will be used to  calculate the cost</description>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_In_USD__c</fullName>
        <label>Value In USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_In_ZAR__c</fullName>
        <label>Value In ZAR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Additional Cost</label>
</CustomObject>